package behavioral.interpreterPattern;

public interface ReadXmlExpression {

    String[] interpret(Context context);

}
